# CHIM-Custom

./: .gitignore  README.md  context_pre.php  globals.php  index.php  manifest.json
SkyrimPlugin/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
SkyrimPlugin/package/SKSE/Plugins/: CHIMCustom.ini
SkyrimPlugin/src/: main.cpp
api/: config.php  state.php
lib/: chim_custom.php
migrations/: 001_initial_schema.sql  002_enable_default_integrations.sql
